<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.intino.magritte</groupId>
	<artifactId>builder</artifactId>
	<version>4.2.0</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven</name>
			<url>https://artifactory.intino.io/artifactory/releases/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>intino-maven</id>
			<url>https://artifactory.intino.io/artifactory/release-builders</url>
		</repository>
	</distributionManagement>
	<build>
		<outputDirectory>../../out/production/builder</outputDirectory>
		<testOutputDirectory>../../out/test/builder</testOutputDirectory>
		<directory>../../out/build/builder</directory>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.12</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>gen</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>io.intino.magritte.builder.TaracRunner</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>true</createDependencyReducedPom>
							<dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml
							</dependencyReducedPomLocation>
							<minimizeJar>false</minimizeJar><!--important-->
							<artifactSet>
								<includes>
									<include>io.intino.legio:model:*</include>
								</includes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>builder-core</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>io</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>language</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
